[package]
name = "compact-bar"
version = "0.1.0"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>" ]
edition = "2021"
license = "MIT"

[dependencies]
colored = {workspace = true}
ansi_term = {workspace = true}
unicode-width = {workspace = true}
zellij-tile = { path = "../../zellij-tile" }
zellij-tile-utils = { path = "../../zellij-tile-utils" }
