[package]
name = "compact-bar"
version = "0.1.0"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>" ]
edition.workspace = true
license.workspace = true

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = { path = "../../zellij-tile" }
zellij-tile-utils = { path = "../../zellij-tile-utils" }
