[package]
name = "fixture-plugin-for-tests"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
# colored = "2"
# ansi_term = "0.12"
# lazy_static = "1.4.0"
# rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# thiserror = "1.0.30"
zellij-tile = { path = "../../zellij-tile" }
# zellij-tile-utils = { path = "../../zellij-tile-utils" }
