[package]
name = "sequence"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2018"

[dependencies]
zellij-tile = { path = "../../zellij-tile" }
unicode-width = "0.1"
fuzzy-matcher = "0.3"
# TODO: get this from Zellij so that we don't have to match versions
strum = "0.27"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
