[package]
name = "session-manager"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2018"

[dependencies]
ansi_term = {workspace = true}
zellij-tile = { path = "../../zellij-tile" }
chrono = {workspace = true}
fuzzy-matcher = {workspace = true}
unicode-width = {workspace = true}
humantime = {workspace = true}
