[package]
name = "session-manager"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition.workspace = true

[dependencies]
ansi_term = "0.12.1"
zellij-tile = { path = "../../zellij-tile" }
chrono = "0.4.0"
fuzzy-matcher = "0.3.7"
unicode-width = "0.1.10"
humantime = "2.1.0"
uuid = { version = "1.7.0", features = ["v4"] }
