[package]
name = "status-bar"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
colored = {workspace = true}
ansi_term = {workspace = true}
lazy_static = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
zellij-tile = { path = "../../zellij-tile" }
zellij-tile-utils = { path = "../../zellij-tile-utils" }

[dev-dependencies]
regex = {workspace = true}
