[package]
name = "status-bar"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition.workspace = true
license.workspace = true

[dependencies]
colored = "2"
ansi_term = "0.12"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
unicode-width = "0.1.8"
zellij-tile = { path = "../../zellij-tile" }
zellij-tile-utils = { path = "../../zellij-tile-utils" }

[dev-dependencies]
regex = "1"
