[package]
name = "strider"
version = "0.2.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
description = "A simplified ranger clone written as a Zellij plugin"
license = "MIT"

[dependencies]
colored = "2.0.0"
zellij-tile = { path = "../../zellij-tile" }
pretty-bytes = "0.2.2"
walkdir = "2.3.3"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1.8"
ansi_term = "0.12.1"
