[package]
name = "strider"
version = "0.2.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
description = "A simplified ranger clone written as a Zellij plugin"
license = "MIT"

[dependencies]
colored = {workspace = true}
zellij-tile = { path = "../../zellij-tile" }
pretty-bytes = {workspace = true}
ignore = {workspace = true}
fuzzy-matcher = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
unicode-width = {workspace = true}
ansi_term = {workspace = true}
strip-ansi-escapes = {workspace = true}
