[package]
name = "strider"
version = "0.2.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition.workspace = true
description = "A simplified ranger clone written as a Zellij plugin"
license.workspace = true

[dependencies]
colored = "2.0.0"
zellij-tile = { path = "../../zellij-tile" }
pretty-bytes = "0.2.2"
ignore = "0.4.20"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1.8"
ansi_term = "0.12.1"
strip-ansi-escapes = "0.1.1"
