[package]
name = "tab-bar"
version = "0.1.0"
authors = ["Jonah Caplan <jonahcaplan@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
colored = {workspace = true}
ansi_term = {workspace = true}
unicode-width = {workspace = true}
zellij-tile = { path = "../../zellij-tile" }
zellij-tile-utils = { path = "../../zellij-tile-utils" }